# ADS-2

ADS2_Assign1_C19313413/: CMakeLists.txt  FileHandling.c  header.h  main.c
Assignment1/: CMakeLists.txt  FileHandling.c  FileHandling.h  LinkedList.c  LinkedList.h  Reports.c  Reports.h  binaryFile.c  header.h  main.c  testFile.c
Week1/Week1/: main.c
Week2/: CMakeLists.txt  main.c
Week3/: 2darray.c  CMakeLists.txt  Question2 .c  countWords.c  pointer.c  pointerArray.c  stringExamples.c  stringFunct2_long.c  stringPointers.c
Week4/: CMakeLists.txt  accessingStructuresPointers.c  arrayBankAccounts.c  callByReference.c  callByValue.c  orderStructure.c  structureOfPoints.c  swapValues.c
Week4/Lab Questions/: Email.c  SwapNumbers.c  cfiles.h  countVowels.c  main.c
Week5/: CMakeLists.txt  arrayBankAccounts.cpp  arrayExams.c  bank_template_lab4.cpp  examWithAnArray.cpp  exams.cpp  linkedListNums.c  main.c  orders.cpp  structureArrayPoints.cpp
Week6/: binaryFileExample.c  linkedListNums.c  searchFunctions.c  textFileExample.c
Week7/: expressionTree.cpp  tree.c
Week8/: BST.c  BST_delete.c
