cmake_minimum_required(VERSION 3.17)
project(Week5)

set(CMAKE_CXX_STANDARD 14)

add_executable(Week5
        arrayBankAccounts.cpp
        arrayExams.c
        bank_template_lab4.cpp
        exams.cpp
        examWithAnArray.cpp
        linkedListNums.c
        main.c
        orders.cpp
        structureArrayPoints.cpp)
